--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 </div>
     <main role="main" class="container-fluid">
-        <div class="row">
+        <div class="row row-top">
             <div class="col-2">
                 <div class="div-block-13 mt-4 ml-4">
                     <h1 class="heading-4" onclick="openNav()">?</h1>
@@ -57,10 +57,8 @@
             </div>
         </div>
         <div class="row align-items-center row-email ml-4">
-            <div class="col align-top">
-                <div id="jg-rotate">
-                    <p class="paragraph-2">hi@jungle.guide</p>
-                </div>
+            <div id="jg-rotate">
+                <p class="paragraph-2">hi@jungle.guide</p>
             </div>
         </div>
 
