--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="">
+    <link rel="icon" href="assets/fav.ico">
     <title>Jungle - Coming Soon</title>
     <link rel="stylesheet" href="assets/bootstrap.min.css" type="text/css">
     <link href="assets/main.css" rel="stylesheet" type="text/css">
