--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="description" content="Social Media, Online Marketing, Digital Strategien | Wir helfen Ihnen bei der digitalen Transformation ihrer Kommunikation.">
     <meta name="author" content="">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
     <meta name = "format-detection" content = "telephone=no">
     <link rel="icon" href="assets/fav.ico">
     <title>Jungle - Ihre Agentur für digitale Kommunikation im Allgäu</title>
@@ -81,8 +85,8 @@
 
                             </div>
                             <div class="row jg-row-1">
-                                <span>t: 0831 51236 36</span>
-                                <span>m: hi@jungle.guide </span>
+                                <p>t: 0831 51236 36</p>
+                                <p>m: hi@jungle.guide </p>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><h2>Datenschutz</h2>
